<resources>
    <string name="app_name">PlanningApp</string>
    <string name="add">اضافه کردن</string>
    <string name="remove">حذف</string>
    <string name="edit">ویرایش</string>
    <string name="details">جزئیات</string>
    <string name="todayPlan">برنامه امروز</string>
    <string name="chooseCourse">انتخاب درس</string>
    <string name="duration">مدت زمان</string>
    <string name="addPlan">برنامه جدید</string>
    <string name="percentage">درصد‌گیری</string>
    <string name="alarm">یاد آوری</string>
    <string name="repeat">تکرار</string>
    <string name="checkList">چک لیست +</string>
    <string name="confirm">تایید</string>
    <string name="back">بازگشت</string>
    <string name="courseList">لیست دروس</string>
    <string name="explains">اضافه کردن</string>
    <string name="plus">+</string>
    <string name="addNewCourse">تعریف درس جدید</string>
    <string name="select">انتخاب</string>
    <string name="reset">حالت پیش فرض</string>
    <string name="commit">تایید</string>
    <string name="courseName">نام درس</string>
    <string name="addLinkedNote">لینک نوشته +</string>
    <string name="addLesson">تعریف بخش +</string>
    <string name="selectCourseColor">انتخاب رنگ درس</string>
    <string name="tick">"\u2713"</string>
    <string name="daily">هرروز هفته</string>
    <string name="weekly">هفتگی</string>
    <string name="limitErrorCheckList">حداکثر تعداد مجاز چک لیست است</string>
    <string name="limitErrorLinkedNote">حداکثر تعداد مجاز نوشته است</string>
    <string name="limitErrorLessons">حداکثر تعداد مجاز زیربخش است</string>
    <string name="litnerBox">جعبه لایتنر</string>
    <string name="all">همه</string>
    <string name="unSeen">خوانده نشده</string>
    <string name="favorite">مورد علاقه</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seeAns">نمایش پاسخ</string>

</resources>