<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlanActivity"
    android:background="@android:color/white"
    android:orientation="vertical"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_addPlan_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:navigationIcon="@drawable/backward_arrow"
        android:background="@color/Bar"
        android:gravity="center"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir"
            android:gravity="start"
            android:text="@string/addPlan"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollViewAddPlan"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_choose_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button1"
                android:fontFamily="@font/vazir"
                android:gravity="center"
                android:hint="@string/chooseCourse"
                android:onClick="chooseCourse"
                android:textColor="@color/Bar"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/vazir"
                android:gravity="center"
                android:text="@string/duration"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <TimePicker
                    android:id="@+id/timePicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:timePickerMode="spinner" />
            </LinearLayout>

            <Button
                android:id="@+id/et_daily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/button1"
                android:fontFamily="@font/vazir"
                android:gravity="center"
                android:hint="@string/repeat"
                android:textColor="@color/Bar"
                android:textSize="23sp" />

            <Button
                android:id="@+id/et_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button1"
                android:fontFamily="@font/vazir"
                android:gravity="center"
                android:hint="@string/alarm"
                android:textColor="@color/Bar"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/vazir"
                android:gravity="center"
                android:text="@string/checkList"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />


            <LinearLayout
                android:id="@+id/CheckListContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/button2"
                        android:gravity="center"
                        android:onClick="addPlan"
                        android:text="@string/plus"
                        android:textColor="@android:color/white"
                        android:textSize="30sp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button2"
                android:text="@string/tick"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_marginHorizontal="100dp"
               android:layout_marginVertical="10dp"/>




</LinearLayout>