<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseActivity"
    android:background="@android:color/white"
    android:orientation="vertical"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_addCourse_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:navigationIcon="@drawable/backward_arrow"
        android:background="@color/Bar"
        android:gravity="center"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir"
            android:gravity="start"
            android:text="@string/addNewCourse"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:id="@+id/scrollViewAddPlan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginHorizontal="50dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_tittle_course"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/button4_normal"
                    android:textColor="@color/DarkLight"
                    android:fontFamily="@font/vazir"
                    android:gravity="center"
                    android:inputType="text"
                    android:hint="@string/courseName"
                    android:textSize="20sp"
                    />

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/course_pic" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginHorizontal="50dp"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >


                    <Button
                        android:id="@+id/btnAddLinkedNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button4"
                        android:fontFamily="@font/vazir"
                        android:hint="@string/addLinkedNote"
                        android:onClick="addNote"
                        android:textColor="@color/DarkLight"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/linkedNotesContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">


                    </LinearLayout>

                </LinearLayout>


                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="top"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/linked_note_pic" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginHorizontal="50dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >


                    <Button
                        android:id="@+id/btnAddLesson"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button4"
                        android:fontFamily="@font/vazir"
                        android:hint="@string/addLesson"
                        android:onClick="addLesson"
                        android:textColor="@color/DarkLight"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/lessonsContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">


                    </LinearLayout>

                </LinearLayout>


                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="top"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/define_lesson_pic" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/notification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button4"
                    android:textColor="@color/DarkLight"
                    android:fontFamily="@font/vazir"
                    android:gravity="center"
                    android:hint="@string/selectCourseColor"
                    android:textSize="20sp"
                    android:onClick="openColorPicker"/>


                <ImageView
                    android:id="@+id/colorPicker"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/select_color_pic" />

            </LinearLayout>




        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="100dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/Bar"
            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="40dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/button2"
            android:onClick="commit"
            android:text="@string/tick"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </LinearLayout>



</LinearLayout>